--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "lint": "eslint '**/*.js'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "lint": "eslint '**/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/401-advanced-javascript-sohad/LAB-31---Hooks-API/issues"
   },
-  "homepage": "https://github.com/401-advanced-javascript-sohad/LAB-31---Hooks-API/",
+  "homepage": "https://github.com/LAB",
   "dependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
